# oxc-resolver

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierrc  .rustfmt.toml  .taplo.toml  .typos.toml  AGENTS.md  CHANGELOG.md  CHANGELOG_OLD.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PHASE_1_SUMMARY.md  README.md  bacon.toml  cache_optimization.patch  cliff.toml  deny.toml  dprint.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  renovate.json  vite.config.ts
.cargo/: config.toml
.github/: FUNDING.yml  codecov.yml  renovate.json
.github/actions/pnpm/: action.yml
.github/actions/vp/: action.yml
.github/workflows/: autofix.yml  benchmark.yml  ci.yml  codecov.yml  copilot-setup-steps.yml  deny.yml  miri.yml  publish_crate.yml  release-napi.yml  release-plz.yml  release.yml  release_napi.yml  security.yml  zizmor.yml
benches/: cache_optimization.rs  memory_fs.rs  package_managers.rs  path_operations.rs  resolver.rs
examples/: file.rs  many.rs  resolver.rs  typescript_resolver.rs
fixtures/bench-pm/bun-flat/: package.json
fixtures/bench-pm/bun-isolated/: package.json
fixtures/bench-pm/npm-flat/: package-lock.json  package.json
fixtures/bench-pm/pnpm-hoisted/: package.json  pnpm-lock.yaml
fixtures/bench-pm/pnpm-isolated/: package.json  pnpm-lock.yaml
fixtures/bench-pm/template/: package.json
fixtures/bench-pm/yarn-flat/: package.json
fixtures/bench-pm/yarn-isolated/: package.json
fixtures/bench-pm/yarn-nm/: package.json
fixtures/bench-pm/yarn-pnp/: package.json
fixtures/bench-pm/yarn-pnpm/: .yarnrc.yml  package.json
fixtures/bench-tsconfig-paths/: README.md
fixtures/bench-tsconfig-paths/1000/: tsconfig.json
fixtures/bench-tsconfig-paths/200/: tsconfig.json
fixtures/declaration_only/: index.js  package.json
fixtures/declaration_only/src/: foo.ts
fixtures/dts_resolver/dir-module/: package.json
fixtures/dts_resolver/hash-import/: package.json
fixtures/dts_resolver/pkg-imports/: package.json
fixtures/dts_resolver/pkg-imports-dir/: package.json
fixtures/dts_resolver/pkg-self/: package.json
fixtures/dts_resolver/with-tsconfig/: tsconfig.json
fixtures/dual-condition-names/: package.json
fixtures/enhanced_resolve/test/: .gitignore
fixtures/global-pnp/: .yarnrc.yml  package.json  test.js
fixtures/integration/: tsconfig_circular_reference_a.json  tsconfig_self_reference.json
fixtures/integration/abnormal-relative-without-node_modules/: package.json
fixtures/misc/: package.json
fixtures/misc/nested-package-json/: package.json
fixtures/misc/package-json-with-bom/: package.json
fixtures/nested-symlink/apps/: tooling
fixtures/package-map/: .package-map.json  multi-version.package-map.json
fixtures/pnp/: .gitignore  .pnp.cjs  .yarnrc.yml  index.test.mjs  package.json  tsconfig.json
fixtures/pnp/shared/: lib.js
fixtures/pnpm/: package.json
fixtures/pnpm-workspace/: package.json
fixtures/pnpm/longfilename/: package.json
fixtures/pnpm8/: package.json  pnpm-lock.yaml
fixtures/prefer-file-over-dir/: package.json
fixtures/prefer-file-over-pkg/: package.json
fixtures/resolve/abnormal-relative-with-node_modules/: package.json
fixtures/tsconfck/: package.json
fixtures/tsconfig/: tsconfig.json  tsconfig_template_variable.json  tsconfig_template_variable1.json  tsconfig_template_variable2.json  tsconfig_template_variable3.json  tsconfig_template_variable4.json
fixtures/tsconfig/bench-tsconfig-paths/: README.md
fixtures/yarn/: package.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: resolver.rs
napi/: .gitignore  CHANGELOG.md  Cargo.toml  browser.js  build.mjs  fallback.js  index.d.ts  index.js  package.json  patch.mjs  pnpm-lock.yaml  resolver.wasi-browser.js  resolver.wasi.cjs  test.mjs  wasi-worker-browser.mjs  wasi-worker.mjs  webcontainer-fallback.js
napi/__test__/: resolver.spec.mjs
napi/src/: lib.rs  options.rs  tracing.rs
napi/tests/: dts.test.mjs  file-protocol.test.mjs  file-resolve.test.mjs  options.test.mjs  resolver.test.mjs  simple.test.mjs  utils.mjs
npm/: .gitignore  README.md  package.json
npm/scripts/: generate-packages.mjs
src/: alias.rs  builtins.rs  cache.rs  cache_perf_test.rs  context.rs  dts_resolver.rs  error.rs  file_system.rs  file_url.rs  fs_cache.rs  json_comments.rs  lib.rs  macos.rs  macos_cache.rs  node_path.rs  options.rs  package_json.rs  package_json_serde.rs  package_map.rs  path.rs  perf.rs  resolution.rs  specifier.rs  tsconfig.rs  tsconfig_context.rs  tsconfig_resolver.rs  tsconfig_serde.rs  util.rs  windows.rs
src/cache/: borrowed_path.rs  cache_impl.rs  cached_meta.rs  cached_path.rs  cached_symlink.rs  hasher.rs  mod.rs  once_arc.rs  path_node.rs  path_node_test.rs  thread_local.rs
src/package_json/: mod.rs  serde.rs  simd.rs
src/tests/: alias.rs  browser_field.rs  builtins.rs  clear_cache.rs  declaration_only.rs  dependencies.rs  dir_listing.rs  dts.rs  dts_resolver.rs  exports_field.rs  extension_alias.rs  extensions.rs  fallback.rs  full_specified.rs  imports_field.rs  incorrect_description_file.rs  main_field.rs  memory_fs.rs  memory_leak.rs  missing.rs  mod.rs  module_type.rs  modules.rs  node_modules_layout.rs  package_json.rs  package_json_resolution.rs  package_map.rs  pnp.rs  resolution.rs  resolve.rs  restrictions.rs  roots.rs  scoped_packages.rs  simple.rs  symlink.rs  ts_extension_tracking.rs  tsconfck.rs  tsconfig_dependencies.rs  tsconfig_discovery.rs  tsconfig_extends.rs  (+9 more)
src/tsconfig/: file_matcher.rs  mod.rs
src/typescript/: at_types.rs  mod.rs  options.rs  type_reference.rs  types_versions.rs
src/unix/: file_system.rs  mod.rs
src/windows/: metadata.rs  mod.rs
tasks/track_allocations/: Cargo.toml  allocs.snap
tasks/track_allocations/src/: main.rs
tasks/track_fs_calls/: Cargo.toml  fs.snap
tasks/track_fs_calls/src/: main.rs
tests/: api.rs  integration_test.rs  memory_analysis.rs  memory_investigation.rs  memory_regression.rs  misc.rs  node_path_test.rs  package.json  resolve_package.rs  resolve_test.rs  tsconfig_circular_reference_b.json
(+244 files in other folders)
