[workspace]
members = ["napi"]
resolver = "2"

[package]
name = "unrs_resolver"
version = "1.7.10"
authors = ["JounQin <admin@1stg.me> (https://www.1stG.me)"]
categories = ["development-tools"]
edition = "2024"
homepage = "https://github.com/unrs/unrs-resolver"
include = ["/src", "/examples", "/benches"]
keywords = ["node", "resolve", "cjs", "esm", "enhanced-resolve"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/unrs/unrs-resolver"
rust-version = "1.85.0"
description = "ESM / CJS module resolution"

[lib]
doctest = false

[[bench]]
name = "resolver"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
# I like the explicitness of this rule as it removes confusion around `clone`.
# This increases readability, avoids `clone` mindlessly and heap allocating on accident.
clone_on_ref_ptr = "warn"
# These two are mutually exclusive, I like `mod.rs` files for better fuzzy searches on module entries.
self_named_module_files = "warn" # "-Wclippy::mod_module_files"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
impl_trait_in_params = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_safety_comment = "warn"
undocumented_unsafe_blocks = "warn"
pedantic = { level = "warn", priority = -1 }
# This rule is too pedantic, I don't want to force this because naming things are hard.
module_name_repetitions = "allow"
doc_markdown = "allow"
# I want to write the best Rust code so both pedantic and nursery is enabled.
# We should only disable rules globally if they are either false positives, chaotic, or does not make sense.
nursery = { level = "warn", priority = -1 }
literal_string_with_formatting_args = "allow"
missing_const_for_fn = "allow"
# cargo
multiple_crate_versions = "allow"

[[example]]
name = "resolver"

[dependencies]
cfg-if = "1.0"
dashmap = "7.0.0-rc2"
dunce = "1.0.5" # Normalize Windows paths to the most compatible format, avoiding UNC where possible
indexmap = { version = "2.9.0", features = ["serde"] }
json-strip-comments = "1.0.4"
once_cell = "1.21.3" # Use `std::sync::OnceLock::get_or_try_init` when it is stable.
papaya = "0.2.1"
rustc-hash = { version = "2.1.1", default-features = false, features = ["std"] }
serde = { version = "1.0.219", features = ["derive"], optional = true } # derive for Deserialize from package.json
serde_json = { version = "1.0.140", features = ["preserve_order"], optional = true } # preserve_order: package_json.exports requires order such as `["require", "import", "default"]`
simdutf8 = { version = "0.1.5", features = ["aarch64_neon"] }
thiserror = "2.0.12"
tracing = "0.1.41"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

pnp = { version = "0.9.4", optional = true }

document-features = { version = "0.2.11", optional = true }

[dev-dependencies]
criterion2 = { version = "3.0.0", default-features = false }
dirs = { version = "6.0.0" }
normalize-path = { version = "0.2.1" }
rayon = { version = "1.10.0" }
vfs = "0.12.1" # for testing with in memory file system

[features]
default = ["fs_cache", "yarn_pnp"]
## Provides the `FsCache` implementation.
fs_cache = ["dep:serde", "dep:serde_json"]
## Enables the [PackageJsonSerde::raw_json] API,
## which returns the `package.json` with `serde_json::Value`.
package_json_raw_json_api = []
## [Yarn Plug'n'Play](https://yarnpkg.com/features/pnp)
yarn_pnp = ["pnp"]
# For codspeed benchmark
codspeed = ["criterion2/codspeed"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# For napi
[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false # set to `true` for debug information
panic = "abort" # Let it crash and force ourselves to write safe Rust.
